# aws-deploy

./: .gitignore  README.md  pyproject.toml
deploy_cli/: aws.py  completion.py  config.py  errors.py  main.py  pipeline.py  ui.py
deploy_cli/commands/: config_cmd.py  list_cmd.py  logs.py  run.py  status.py
docs/superpowers/plans/: 2026-05-06-deploy-cli.md
docs/superpowers/specs/: 2026-05-06-deploy-cli-design.md
examples/: config.yaml
tests/: conftest.py  test_aws.py  test_commands_config.py  test_commands_run.py  test_commands_simple.py  test_completion.py  test_config.py  test_integration.py  test_main.py  test_pipeline.py  test_ui.py
